adding-display-grid-rendering-neigbourcountry

--- a/country_assets.css
+++ b/country_assets.css
@@ -10,6 +10,7 @@
 
 .form__input {
   font-family: "Roboto", sans-serif;
+  max-width: 15rem;
   color: #333;
   font-size: 1rem;
   margin: 0 auto;
