--- a/country_main.css
+++ b/country_main.css
@@ -10,49 +10,22 @@ body {
 /* Header Section */
 header {
   margin: 1rem 0;
-}
-/* All Display Flex property */
-body,
-footer,
-.container-main,
-.container-country-main- {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  border-bottom: 0.25px solid gray;
 }
+header img {
+  height: 50px;
+}
+.center-content-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* All Display Flex property */
+
 /* Main Section */
 /* style from input are in country_asset.css */
-.img-country-flag {
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
-  width: 20rem;
-  height: 12.5rem;
-  object-fit: cover;
-}
-.container-country-main- {
-  box-shadow: 14px 6px 44px -19px rgba(66, 68, 90, 1);
-  width: 20rem;
-  transform: scale(0.9);
-}
-.container-country-main- h2,
-h3 {
-  width: 15.625rem;
-}
-.container-country-main- .container-country-lower-section {
-  padding: 1rem 2rem;
-  background-color: white;
-}
-.container-country-lower-section p {
-  margin-bottom: 0.5rem;
-  font-size: 1.25rem;
-}
-.country-name-region-container {
-  margin-bottom: 0.5rem;
-}
-.country-name-region-container p {
-  margin-bottom: 10rem;
-}
 
 /* container-neighbour */
 .container-neighbour {
