--- a/country_main.css
+++ b/country_main.css
@@ -9,23 +9,35 @@ body {
 }
 /* Header Section */
 header {
-  margin: 1rem 0;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   border-bottom: 0.25px solid gray;
 }
 header img {
+  margin: 10px;
   height: 50px;
+  cursor: pointer;
 }
-.center-content-header {
-  display: flex;
+header div {
   justify-content: center;
-  align-items: center;
 }
-/* All Display Flex property */
-
-/* Main Section */
-/* style from input are in country_asset.css */
+header p {
+  font-size: 25px;
+}
+header input {
+  width: 30rem;
+  height: 25px;
+  font-size: 20px;
+  padding-left: 10px;
+  text-align: center;
+}
+header button {
+  margin-right: 100px;
+}
+.cointerner-left-side {
+  display: flex;
+}
 
 /* container-neighbour */
 .container-neighbour {
@@ -42,6 +54,7 @@ header img {
 
 /* Footer Section  */
 footer {
+  text-align: center;
   position: fixed;
   left: 0;
   bottom: 0;
