--- a/country_main.css
+++ b/country_main.css
@@ -31,31 +31,21 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 0.2496px solid black;
+  border-bottom: 0.0156rem solid black;
   background-color: var(--light-secondary-color);
   transition: background-color 1s;
 }
 header img {
-  margin: 10px;
-  height: 50px;
+  margin: 0.625rem;
+  height: 3.125rem;
   cursor: pointer;
 }
 header div {
   justify-content: center;
 }
-header p {
-  font-size: 25px;
-}
-header input {
-  width: 30rem;
-  height: 25px;
-  font-size: 20px;
-  padding-left: 10px;
-  text-align: center;
-}
 header button {
-  padding: 10px;
-  margin-right: 50px;
+  padding: 0.625rem;
+  margin-right: 3.125rem;
   font-weight: 500;
   cursor: pointer;
   background-color: var(--light-main-bg-color);
@@ -65,6 +55,16 @@ header button {
 }
 header button:hover {
   opacity: 0.3;
+}
+h1 {
+  color: var(--light-font-color);
+}
+.cointerner-left-side input {
+  width: 480px;
+  height: 1.5625rem;
+  font-size: 1.25rem;
+  padding-left: 0.625rem;
+  text-align: center;
 }
 .cointerner-left-side,
 .cointeiner-right-side {
@@ -76,39 +76,64 @@ header button:hover {
   align-items: center;
   flex-direction: column;
 }
-
+/* POP-UP */
+.pop-up-window-container {
+  position: relative;
+}
+.pop-up-window {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--light-secondary-color);
+  padding: 5px;
+  width: 160px;
+  margin-left: -3.125rem;
+  margin-top: 10px;
+  border: 0.0625rem solid black;
+  font-size: 20px;
+}
+.pop-up-window-hide {
+  display: none;
+}
+label {
+  display: flex;
+}
+label p {
+  margin-bottom: 10px;
+  color: var(--light-font-color);
+}
 /* Main Country */
 .container-main {
   display: grid;
   justify-items: center;
   align-items: center;
-  grid-template-columns: repeat(6, 0px);
+  grid-template-columns: repeat(6, 0rem);
   grid-template-rows: repeat(4, auto);
-  grid-row-gap: 1px;
-  grid-column-gap: 300px;
-  margin-left: 12.5rem;
+  grid-row-gap: 0.0625rem;
+  grid-column-gap: 18.75rem;
+  margin-left: 200px;
 }
 .container-country-main- {
-  margin: 0.9375rem;
-  box-shadow: 0rem 0rem 0.6875rem 0.0625rem var(--light-font-color);
+  margin: 15px;
+  box-shadow: 0px 0px 11px 1px var(--light-font-color);
   background-color: white;
 }
 .container-country-main-,
 .container-country-main- img {
-  border-top-right-radius: 0.625rem;
-  border-top-left-radius: 0.625rem;
-  width: 240px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  width: 15rem;
 }
 .container-country-main- img {
-  height: 160px;
+  height: 10rem;
   object-fit: cover;
 }
 .country-name-region-container,
 .country-info-container {
-  margin: 0.625rem;
+  margin: 10px;
 }
 .country-info-container {
-  padding-bottom: 0.625rem;
+  padding-bottom: 10px;
 }
 /* Footer Section  */
 footer {
@@ -119,7 +144,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 2rem;
+  height: 32px;
   background-color: var(--light-secondary-color);
   transition: background-color 1s;
 }
