--- a/country_main.css
+++ b/country_main.css
@@ -84,6 +84,7 @@ h1 {
   position: absolute;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background-color: var(--light-secondary-color);
   padding: 5px;
   width: 160px;
@@ -115,7 +116,7 @@ label p {
 }
 .container-country-main- {
   margin: 15px;
-  box-shadow: 0px 0px 11px 1px var(--light-font-color);
+  box-shadow: 9px 7px 31px -12px var(--light-font-color);
   background-color: white;
 }
 .container-country-main-,
