--- a/country_main.css
+++ b/country_main.css
@@ -138,7 +138,7 @@ label p {
 }
 .map-info {
   cursor: pointer;
-  width: 80px;
+  width: 5.625rem;
 }
 /* Footer Section  */
 footer {
@@ -156,4 +156,8 @@ footer {
 footer p {
   color: var(--light-font-color);
   transition: color 1s;
+}
+/* Display  */
+.display {
+  display: none;
 }
