--- a/country_main.css
+++ b/country_main.css
@@ -20,6 +20,8 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--light-main-bg-color);
   transition: background-color 1s;
+  display: flex;
+  flex-direction: column;
 }
 h2,
 h3,
@@ -158,17 +160,7 @@ footer p {
   color: var(--light-font-color);
   transition: color 1s;
 }
-/* Display  */
+
 .display {
   display: none;
-}
-#map {
-  display: none;
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  background-color: red;
-}
-.map-info:hover ~ #map {
-  display: block;
 }
