--- a/country_main.css
+++ b/country_main.css
@@ -1,217 +1,227 @@
 :root {
-  /* Light Mode */
-  --light-main-bg-color: #e0a96d;
-  --light-secondary-color: #ddc3a5;
-  --light-font-color: #000000;
+	/* Light Mode */
+	--light-main-bg-color: #e0a96d;
+	--light-secondary-color: #ddc3a5;
+	--light-font-color: #000000;
 }
 /* Dark-Mode */
 body.dark-mode {
-  --light-main-bg-color: #222831;
-  --light-secondary-color: #393e46;
-  --light-font-color: white;
-  transition: all 1s;
+	--light-main-bg-color: #222831;
+	--light-secondary-color: #393e46;
+	--light-font-color: white;
+	transition: all 1s;
 }
 /* Main tags */
 * {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 main {
-  overflow-x: hidden;
-  overflow-y: hidden;
+	position: relative;
+	/* overflow-x: hidden;
+	overflow-y: hidden; */
 }
 body {
-  font-family: "Roboto", sans-serif;
-  background-color: var(--light-main-bg-color);
-  transition: background-color 1s;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: hidden;
+	font-family: "Roboto", sans-serif;
+	background-color: var(--light-main-bg-color);
+	transition: background-color 1s;
+	display: flex;
+	flex-direction: column;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 h2,
 h3,
 p {
-  color: black;
+	color: black;
 }
 /* Header Section */
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 0.0156rem solid black;
-  background-color: var(--light-secondary-color);
-  transition: background-color 1s;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 0.0156rem solid black;
+	background-color: var(--light-secondary-color);
+	transition: background-color 1s;
 }
 header img {
-  margin: 0.625rem;
-  height: 3.125rem;
-  cursor: pointer;
+	margin: 0.625rem;
+	height: 3.125rem;
+	cursor: pointer;
 }
 header div {
-  justify-content: center;
+	justify-content: center;
 }
 header button {
-  padding: 0.625rem;
-  margin-right: 3.125rem;
-  font-weight: 500;
-  cursor: pointer;
-  background-color: var(--light-main-bg-color);
-  color: var(--light-font-color);
-  border-color: var(--light-font-color);
-  transition: background-color 1s, color 1s, border-color 1s;
+	padding: 0.625rem;
+	margin-right: 3.125rem;
+	font-weight: 500;
+	cursor: pointer;
+	background-color: var(--light-main-bg-color);
+	color: var(--light-font-color);
+	border-color: var(--light-font-color);
+	transition: background-color 1s, color 1s, border-color 1s;
 }
 header button:hover {
-  opacity: 0.3;
+	opacity: 0.3;
 }
 h1 {
-  color: var(--light-font-color);
+	color: var(--light-font-color);
 }
 .cointerner-left-side input {
-  width: 480px;
-  height: 1.5625rem;
-  font-size: 1.25rem;
-  padding-left: 0.625rem;
-  text-align: center;
+	width: 480px;
+	height: 1.5625rem;
+	font-size: 1.25rem;
+	padding-left: 0.625rem;
+	text-align: center;
 }
 .cointerner-left-side,
 .cointeiner-right-side {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 }
 .left-content-header {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
 /* POP-UP */
 .pop-up-window-container {
-  position: relative;
+	position: relative;
 }
 .pop-up-window {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: var(--light-secondary-color);
-  padding: 5px;
-  width: 160px;
-  margin-left: -3.125rem;
-  margin-top: 10px;
-  border: 0.0625rem solid black;
-  font-size: 20px;
+	z-index: 10;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	background-color: var(--light-secondary-color);
+	padding: 5px;
+	width: 160px;
+	margin-left: -3.125rem;
+	margin-top: 10px;
+	border: 0.0625rem solid black;
+	font-size: 20px;
 }
 .pop-up-window-hide {
-  display: none;
+	display: none;
 }
 label {
-  display: flex;
+	display: flex;
 }
 label p {
-  margin-bottom: 10px;
-  color: var(--light-font-color);
+	margin-bottom: 10px;
+	color: var(--light-font-color);
 }
 /* Main Country */
 .container-main {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  grid-template-columns: repeat(6, 0rem);
-  grid-template-rows: repeat(4, auto);
-  grid-row-gap: 0.0625rem;
-  grid-column-gap: 18.75rem;
-  margin-left: 200px;
+	display: grid;
+	justify-items: center;
+	align-items: center;
+	grid-template-columns: repeat(6, 0rem);
+	grid-template-rows: repeat(4, auto);
+	grid-row-gap: 0.0625rem;
+	grid-column-gap: 18.75rem;
+	margin-left: 200px;
 }
 .container-country-main- {
-  margin: 15px;
-  box-shadow: 9px 7px 31px -12px var(--light-font-color);
-  background-color: rgb(241, 240, 240);
+	margin: 15px;
+	box-shadow: 9px 7px 31px -12px var(--light-font-color);
+	background-color: rgb(241, 240, 240);
 }
 .container-country-main-,
 .container-country-main- img {
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  width: 15rem;
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+	width: 15rem;
 }
 .container-country-main- img {
-  height: 10rem;
-  object-fit: cover;
+	height: 10rem;
+	object-fit: cover;
 }
 .country-name-region-container,
 .country-info-container {
-  margin: 10px;
+	margin: 10px;
 }
 .country-info-container {
-  padding-bottom: 10px;
+	padding-bottom: 10px;
 }
 .map-info {
-  cursor: pointer;
-  width: 5.625rem;
+	cursor: pointer;
+	width: 5.625rem;
 }
 /* Footer Section  */
 footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 32px;
-  background-color: var(--light-secondary-color);
-  transition: background-color 1s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 32px;
+	background-color: var(--light-secondary-color);
+	transition: background-color 1s;
 }
 footer p {
-  color: var(--light-font-color);
-  transition: color 1s;
+	color: var(--light-font-color);
+	transition: color 1s;
 }
 
 .display {
-  display: none;
+	display: none;
 }
 /* History wrapper Section */
 .history-container-main {
-  z-index: 5;
-  justify-content: flex-end;
-  display: flex;
-  position: absolute;
-  right: 0px;
+	top: 0;
+	right: 0;
+	display: flex;
+	position: absolute;
 }
 .history-container-main p {
-  color: var(--light-font-color);
+	color: var(--light-font-color);
 }
 .history-container-main ul {
-  list-style-type: none;
-  text-align: center;
+	list-style-type: none;
+	text-align: center;
 }
 .history-container li {
-  margin-bottom: 5px;
-  width: 150px;
+	margin-bottom: 5px;
+	width: 150px;
 }
 .history-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--light-secondary-color);
-  color: var(--light-font-color);
-  margin-top: 50px;
-  font-size: 20px;
-  margin-right: -150px;
-  transition: margin-right 2s;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	background-color: var(--light-secondary-color);
+	color: var(--light-font-color);
+	height: 300px;
+	margin-top: 50px;
+	font-size: 20px;
+	margin-right: -150px;
+	transition: margin-right 2s;
 }
 .history-container-main button {
-  position: absolute;
-  left: -44px;
-  background-color: var(--light-secondary-color);
-  font-size: 40px;
-  border: none;
-  padding-right: 5px;
-  transition: background-color 1s;
-  cursor: pointer;
-  padding-left: 10px;
-  border-radius: 10px;
+	left: -60px;
+	position: absolute;
+	background-color: var(--light-secondary-color);
+	font-size: 35px;
+	border: none;
+	padding-right: 5px;
+	transition: background-color 1s;
+	cursor: pointer;
+	padding-left: 10px;
+	border-radius: 10px;
 }
 .history-container-display {
-  margin-right: 0px;
-  transition: margin-right 2s;
+	margin-right: 0px;
+	transition: margin-right 2s;
+}
+.history-container-btn {
+	text-align: center;
+	cursor: pointer;
+	font-size: 25px;
+	position: absolute;
+	bottom: -35px;
+	left: 50px;
 }
