--- a/country_main.css
+++ b/country_main.css
@@ -86,9 +86,6 @@ h1 {
 	flex-direction: column;
 }
 /* POP-UP */
-.pop-up-window-container {
-	position: relative;
-}
 .pop-up-window {
 	z-index: 10;
 	position: absolute;
@@ -113,6 +110,7 @@ label p {
 	margin-bottom: 10px;
 	color: var(--light-font-color);
 }
+
 /* Main Country */
 .container-main {
 	display: grid;
@@ -232,4 +230,24 @@ footer p {
 }
 .history-container p {
 	text-align: center;
+}
+/* Error Handling PopUP */
+.error-notification {
+	z-index: -1;
+	box-shadow: 9px 7px 31px -12px var(--light-font-color);
+	border: 1px solid white;
+	padding: 7px;
+	top: -100px;
+	right: 200px;
+	position: absolute;
+	font-size: 20px;
+	border-left: 10px solid red;
+	transition: top 1s;
+}
+.error-notification p {
+	color: var(--light-font-color);
+}
+.error-notification-show {
+	transition: top 1s;
+	top: 10px;
 }
